--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Personal Portfolio Website</title>
+    <title>Chirag Patel</title>
     <!----CSS link----->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -14,9 +14,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Service</a></li>
                 <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Blog</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
             <a href="#" class="btn">Buy Now</a>
@@ -24,7 +22,7 @@
 
         <div class="content">
             <span class="title">Freelance Web Developer</span>
-            <h1>Hello, I’m <span>Fatima</span></h1>
+            <h1>Hello, I’m <span>Chirag</span></h1>
             <p>I’m working on a professional, visually sophisticated and technologically proficient, responsive and multi-functional React Template Imroz.</p>
             <a href="#" class="btn">Download CV</a>
         </div>
