--- a/index.html
+++ b/index.html
@@ -1,33 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Chirag Patel</title>
-    <!----CSS link----->
-    <link rel="stylesheet" href="style.css">
-</head>
+<html>
+
 <body>
-
-    <div class="hero">
-        <nav>
-            <img src="logo.png" class="logo">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-            <a href="#" class="btn">Buy Now</a>
-        </nav>
-
-        <div class="content">
-            <span class="title">Freelance Web Developer</span>
-            <h1>Hello, I’m <span>Chirag</span></h1>
-            <p>I’m working on a professional, visually sophisticated and technologically proficient, responsive and multi-functional React Template Imroz.</p>
-            <a href="#" class="btn">Download CV</a>
-        </div>
-    </div>
-
+  <h1>YOUR NAME</h1>
+  <p>Welcome to my website!</p>
+  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
-</html>
 
+</html>
