--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <img src="logo.png" class="logo">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="/home/">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Education</a></li>
                 <li><a href="#">Portfolio</a></li>
