--- a/index.html
+++ b/index.html
@@ -1,32 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Chirag Patel Website</title>
-    <!----CSS link----->
+<html>
+  <head>
+    <meta charset="utf-8">
+    <script src="https://use.fontawesome.com/d1341f9b7a.js"></script>
     <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-    <div class="hero">
-        <nav>
-            <img src="logo.png" class="logo">
-            <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Education</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-
-        <div class="content">
-            <span class="title">Freelance Web Developer</span>
-            <h1>Hello, I’m <span>Chirag</span></h1>
-            <p>I’m working on a professional, visually sophisticated and technologically proficient, responsive and multi-functional React Template Imroz.</p>
-            <a href="#" class="btn">Download CV</a>
-        </div>
-    </div>
-
+    <title>Personal WebSite</title>
+  </head>
+  <body>
+<div class="box">
+  <img src="profile.jpg" alt="" class="box-img">
+  <h1>
+DarkCode</h1>
+<h5>
+Web Devloper - Web Designer</h5>
+<p>
+A web developer is a programmer who specializes in, or is specifically engaged in, the development of World Wide Web applications, or applications that are run over HTTP from a web server to a web browser.</p>
+<ul>
+<li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+<li><a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
+<li><a href="#"><i class="fa fa-google-plus-square" aria-hidden="true"></i></a></li>
+</ul>
+</div>
 </body>
 </html>
