--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="utf-8">
     <script src="https://use.fontawesome.com/d1341f9b7a.js"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Personal WebSite</title>
+    <title>Chirag Patel</title>
   </head>
   <body>
 <div class="box">
   <img src="profile.jpg" alt="" class="box-img">
   <h1>
-DarkCode</h1>
+Chirag Patel</h1>
 <h5>
-Web Devloper - Web Designer</h5>
+Software Developer</h5>
 <p>
-A web developer is a programmer who specializes in, or is specifically engaged in, the development of World Wide Web applications, or applications that are run over HTTP from a web server to a web browser.</p>
+Recent Software Engineering graduate with fundamental knowledge of software design, development, and testing. Seeking to utilize broad educational background with excellent analytical, technical, and programming skills to thrive as an entry-level software engineer.</p>
 <ul>
 <li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
 <li><a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
